added a list to push code

--- a/My first website/styles/index.css
+++ b/My first website/styles/index.css
@@ -1,8 +1,5 @@
-h3{
-    background-color: aqua;
-}
-p{
-    color: red;
-    background-color: aqua;
-    margin: 10px;
+div{
+    color: blue;
+    background-color: red;
+    margin-bottom: 20px;
 }
